--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </form>
     <h3> La liste des Eleves</h3>
 
-    <button id='voir'>Voir LocalStorage</button>
+    
     <label id="liste" for=""></label>
     <ul  id="listeEleves"> </ul>
 
@@ -25,6 +25,6 @@
     <h2>Groupes</h2>
     <div id="groupes"></div>
     
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
